<resources>
    <string name="app_name">Chat</string>
    <string name="user_name">Omprakash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="register_view_title">Register</string>
    <string name="register_view_email">Email</string>
    <string name="register_view_password">Password</string>
    <string name="application_title">Orate</string>
</resources>