<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/robot"
                android:tint="@color/white"
                android:layout_marginEnd="8dp">
            </de.hdodenhof.circleimageview.CircleImageView>
            <TextView
                android:id="@+id/app_title_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_title"
                android:textSize="18sp"
                android:layout_marginLeft="26dp"
                android:textColor="@color/white"
                android:layout_marginStart="26dp">

            </TextView>
        </androidx.appcompat.widget.Toolbar>
<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/tab_layout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/white"-->
<!--            app:tabIndicatorColor="@color/purple_500">-->
<!--        </com.google.android.material.tabs.TabLayout>-->
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/register_view_title"
            android:textSize="24sp"
            android:textColor="@color/black">
        </TextView>
        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Name"
            tools:ignore="TextFields"
            android:importantForAutofill="no">
        </EditText>
        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/register_view_email"
            tools:ignore="TextFields"
            android:importantForAutofill="no">
        </EditText>
        <EditText
            android:id="@+id/password_register"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/register_view_password"
            tools:ignore="TextFields"
            android:importantForAutofill="no">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_btn"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:background="@color/purple_700" />
    </LinearLayout>

</LinearLayout>